--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "nodemon index"
+    "test": "node index.js"
   },
   "keywords": [],
   "author": "",
